[gd_scene load_steps=7 format=3 uid="uid://d188ef8dxjvfn"]

[ext_resource type="Script" uid="uid://ct6pcd2yt8mos" path="res://spike.gd" id="1_8ryga"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pe76i"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8ryga"]
radius = 40.0

[sub_resource type="Curve" id="Curve_8ryga"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(0.713235, 0.674157), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_xfwl5"]
curve = SubResource("Curve_8ryga")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7k7bx"]
lifetime_randomness = 0.09
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 15, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_max = 206.9
gravity = Vector3(0, 200, 0)
damping_min = 28.736
damping_max = 28.736
scale_min = 15.0
scale_max = 15.0
scale_curve = SubResource("CurveTexture_xfwl5")

[node name="Spike" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_8ryga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pe76i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="spawnRadius" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawnRadius"]
shape = SubResource("CircleShape2D_8ryga")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-20, -20, 40, 40)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.1
process_material = SubResource("ParticleProcessMaterial_7k7bx")

[connection signal="area_entered" from="spawnRadius" to="." method="_on_spawn_radius_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
